--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
+    "chromatic": "^6.17.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
