--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.36.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@storybook/addon-essentials": "^7.0.0-rc.1",
     "@storybook/addon-interactions": "^7.0.0-rc.1",
@@ -33,7 +34,7 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
     "chromatic": "^6.17.1",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
