--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -24,3 +24,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./storybook-static
+
+permissions:
+  contents: write
